--- a/index.html
+++ b/index.html
@@ -515,7 +515,7 @@ function submitEstimate() {
   let contract = document.getElementById("contractPrice").innerText;
   let usd = document.getElementById("usdPrice").innerText;
   // emailjs 전송
-  emailjs.send('service_e6uns2x', 'template_8pyzye5', {
+  emailjs.send('service_e6uns2x', 'template_hhk1zot', {
     travel_date: travelDate,
     name: name,
     phone: phone,
