--- a/index.html
+++ b/index.html
@@ -38,6 +38,23 @@
     /* 폼 구성요소 margin 조정 */
     .section, .date-section, .result-section, .contact-section { margin-bottom: 24px; }
     h1 { font-size: 1.18rem; font-weight: bold; text-align: center; margin-bottom: 24px; color: #14508e; letter-spacing: -1px;}
+.result-section .result-title {
+  font-size: 1.21em;
+  font-weight: bold;
+  color: #17508e;
+  margin-bottom: 2px;
+}
+.result-section .result-desc {
+  font-size: 0.95em;
+  color: #989898;
+  margin-bottom: 10px;
+}
+.result-section .result-big {
+  font-size: 1.5em;   /* 2pt ↑ */
+  font-weight: 700;
+  color: #d02b2b;
+  margin-left: 3px;
+}
 
     /* 모바일에서 1단으로 변경 */
     @media (max-width: 900px) {
@@ -92,6 +109,12 @@
       .section-label-row {flex-direction:column; align-items:flex-start;gap:6px;}
       .date-input-wrap {padding:8px 7px;}
     }
+        @media (max-width: 700px) {
+  .result-section .result-title { font-size: 1.35em;}
+  .result-section .result-desc { font-size: 1.08em;}
+  .result-section .result-big { font-size: 1.8em;}
+  /* 여기에 모바일에서만 커지는 스타일, 버튼 위치 조정 등 추가 가능 */
+}
   </style>
 </head>
 <body>
@@ -157,9 +180,13 @@
       </div>
       <!-- 결과 견적 -->
       <div class="result-section" id="resultSection">
-        계약금 (한국에서 입금하실 금액): <span id="contractPrice">0원</span><br>
-        잔금 (현지에서 달러 지불하실 금액): <span id="usdPrice">$0</span>
-      </div>
+         <div class="result-title">빠른 견적 금액</div>
+          <div class="result-desc">(실제 견적과 상이할 수 있습니다.)</div>
+         계약금 (한국에서 입금하실 금액): 
+    <span id="contractPrice" class="result-big"></span><br>
+  잔금 (현지에서 달러 지불하실 금액): 
+    <span id="usdPrice" class="result-big"></span>
+</div>
       <!-- 연락처 정보 -->
       <div class="contact-section">
         <label class="contact-label" for="contactName">대표자 성함 <span style="color:#d02b2b;">*</span></label>
